crates/hale-syntax/src/parser.rs
//! Recursive-descent parser with a Pratt expression sub-parser. On error it records
//! a [`Diagnostic`] and recovers to the next top-level item so a single typo does not
//! cascade into a wall of spurious errors.

use crate::ast::*;
use crate::diag::{Diagnostic, Diagnostics};
use crate::lexer::lex;
use crate::span::{Span, Spanned};
use crate::token::{Token, TokenKind};

struct ParseError;
type PResult<T> = Result<T, ParseError>;

pub fn parse(src: &str) -> (Program, Diagnostics) {
    let (tokens, mut diags) = lex(src);
    let mut p = Parser {
        toks: tokens,
        pos: 0,
        prev: Span::default(),
        diags: Diagnostics::new(),
        no_record: false,
    };
    let program = p.parse_program();
    diags.extend(p.diags);
    (program, diags)
}

struct Parser {
    toks: Vec<Token>,
    pos: usize,
    prev: Span,
    diags: Diagnostics,
    /// When set, an `ident {` is *not* treated as a record literal. Used while parsing
    /// a `match` scrutinee so the following `{ arms }` is not eaten as a record (the
    /// classic struct-literal-in-condition ambiguity). Reset inside `(...)`/`[...]`.
    no_record: bool,
}

impl Parser {
    // ---------- cursor primitives ----------

    fn cur(&self) -> &TokenKind {
        &self.toks[self.pos].kind
    }
    fn cur_span(&self) -> Span {
        self.toks[self.pos].span
    }
    fn nth(&self, n: usize) -> &TokenKind {
        let i = (self.pos + n).min(self.toks.len() - 1);
        &self.toks[i].kind
    }
    fn at(&self, k: &TokenKind) -> bool {
        std::mem::discriminant(self.cur()) == std::mem::discriminant(k)
    }
    fn at_eof(&self) -> bool {
        matches!(self.cur(), TokenKind::Eof)
    }
    fn bump(&mut self) -> Token {
        let t = self.toks[self.pos].clone();
        self.prev = t.span;
        if self.pos + 1 < self.toks.len() {
            self.pos += 1;
        }
        t
    }
    fn eat(&mut self, k: &TokenKind) -> bool {
        if self.at(k) {
            self.bump();
            true
        } else {
            false
        }
    }
    fn ident_text(&self) -> Option<&str> {
        if let TokenKind::Ident(s) = self.cur() {
            Some(s)
        } else {
            None
        }
    }

    fn err<T>(&mut self, span: Span, msg: impl Into<String>) -> PResult<T> {
        self.diags.push(Diagnostic::error(span, msg));
        Err(ParseError)
    }

    fn expect(&mut self, k: TokenKind) -> PResult<Token> {
        if self.at(&k) {
            Ok(self.bump())
        } else {
            let span = self.cur_span();
            let found = self.cur().describe();
            self.err(span, format!("expected {}, found {}", k.describe(), found))
        }
    }

    fn take_ident(&mut self) -> PResult<Name> {
        if let TokenKind::Ident(_) = self.cur() {
            let t = self.bump();
            if let TokenKind::Ident(s) = t.kind {
                return Ok(Spanned::new(s, t.span));
            }
        }
        let span = self.cur_span();
        let found = self.cur().describe();
        self.err(span, format!("expected an identifier, found {found}"))
    }

    /// Like [`take_ident`], but also accepts a keyword token as a plain name. Used in
    /// positions where a name is unambiguously expected (setting/record/field keys),
    /// so e.g. `retry` can be both a keyword and an endpoint setting key.
    fn take_name_lenient(&mut self) -> PResult<Name> {
        if let TokenKind::Ident(_) = self.cur() {
            return self.take_ident();
        }
        if let Some(text) = self.cur().keyword_text() {
            let t = self.bump();
            return Ok(Spanned::new(text.to_string(), t.span));
        }
        let span = self.cur_span();
        let found = self.cur().describe();
        self.err(span, format!("expected a name, found {found}"))
    }

    // ---------- program / items ----------

    fn parse_program(&mut self) -> Program {
        let mut items = Vec::new();
        while !self.at_eof() {
            let before = self.pos;
            match self.parse_item() {
                Ok(item) => items.push(item),
                Err(_) => self.recover_to_item(),
            }
            // Guarantee forward progress even if recovery left us in place.
            if self.pos == before && !self.at_eof() {
                self.bump();
            }
        }
        Program { items }
    }

    /// Skip tokens until something that plausibly begins a new top-level item.
    fn recover_to_item(&mut self) {
        while !self.at_eof() {
            if matches!(
                self.cur(),
                TokenKind::Endpoint
                    | TokenKind::Type
                    | TokenKind::Contract
                    | TokenKind::Flow
                    | TokenKind::Mock
                    | TokenKind::Test
                    | TokenKind::Server
                    | TokenKind::Fetch
                    | TokenKind::Let
                    | TokenKind::Log
                    | TokenKind::Parallel
            ) {
                return;
            }
            self.bump();
        }
    }

    fn parse_item(&mut self) -> PResult<Item> {
        match self.cur() {
            TokenKind::Endpoint => Ok(Item::Endpoint(self.parse_endpoint()?)),
            TokenKind::Type | TokenKind::Contract => Ok(Item::Type(self.parse_type_decl()?)),
            TokenKind::Flow => Ok(Item::Flow(self.parse_flow()?)),
            TokenKind::Mock => Ok(Item::Mock(self.parse_mock()?)),
            TokenKind::Test => Ok(Item::Test(self.parse_test()?)),
            TokenKind::Server => Ok(Item::Server(self.parse_server()?)),
            _ => Ok(Item::Stmt(self.parse_stmt()?)),
        }
    }

    // ---------- endpoint ----------

    fn parse_endpoint(&mut self) -> PResult<EndpointDecl> {
        let start = self.cur_span();
        self.bump(); // endpoint
        let name = self.take_ident()?;
        self.expect(TokenKind::LBrace)?;
        let mut settings = Vec::new();
        while !self.at(&TokenKind::RBrace) && !self.at_eof() {
            let s_start = self.cur_span();
            let key = self.take_name_lenient()?;
            self.expect(TokenKind::Colon)?;
            let values = self.parse_setting_values()?;
            settings.push(Setting {
                key,
                values,
                span: s_start.merge(self.prev),
            });
        }
        self.expect(TokenKind::RBrace)?;
        Ok(EndpointDecl {
            name,
            settings,
            span: start.merge(self.prev),
        })
    }

    /// Parse one or more space-separated atoms until the next `key:` or `}`.
    fn parse_setting_values(&mut self) -> PResult<Vec<Expr>> {
        let mut vals = Vec::new();
        loop {
            vals.push(self.parse_expr()?);
            // `route` begins a server route, never a setting value.
            if self.at(&TokenKind::RBrace) || self.at_eof() || self.at(&TokenKind::Route) {
                break;
            }
            // A following `name :` starts the next setting (the name may be a keyword
            // doubling as a setting key, e.g. `retry:`).
            let next_is_key =
                matches!(self.cur(), TokenKind::Ident(_)) || self.cur().keyword_text().is_some();
            if next_is_key && matches!(self.nth(1), TokenKind::Colon) {
                break;
            }
        }
        Ok(vals)
    }

    // ---------- type / contract ----------

    fn parse_type_decl(&mut self) -> PResult<TypeDecl> {
        let start = self.cur_span();
        let is_contract = matches!(self.cur(), TokenKind::Contract);
        self.bump();
        // Optionally qualified: `contract GitHub.Repo` defines type `Repo`.
        let mut name = self.take_ident()?;
        if self.eat(&TokenKind::Dot) {
            name = self.take_ident()?;
        }
        self.expect(TokenKind::LBrace)?;
        let mut fields = Vec::new();
        while !self.at(&TokenKind::RBrace) && !self.at_eof() {
            let f_start = self.cur_span();
            let fname = self.take_name_lenient()?;
            self.expect(TokenKind::Colon)?;
            let ty = self.parse_type()?;
            let constraint = if self.eat(&TokenKind::Where) {
                self.expect(TokenKind::LParen)?;
                let c = self.parse_constraint()?;
                self.expect(TokenKind::RParen)?;
                Some(c)
            } else {
                None
            };
            self.eat(&TokenKind::Comma);
            fields.push(FieldDecl {
                name: fname,
                ty,
                constraint,
                span: f_start.merge(self.prev),
            });
        }
        self.expect(TokenKind::RBrace)?;
        Ok(TypeDecl {
            is_contract,
            name,
            fields,
            span: start.merge(self.prev),
        })
    }

    fn parse_constraint(&mut self) -> PResult<Constraint> {
        let subject = if self.ident_text() == Some("length") {
            self.bump();
            ConstraintSubject::Length
        } else {
            ConstraintSubject::Value
        };
        if self.eat(&TokenKind::In) {
            let lo = self.parse_expr()?;
            self.expect(TokenKind::DotDot)?;
            let hi = self.parse_expr()?;
            return Ok(Constraint::InRange { subject, lo, hi });
        }
        let op = self.parse_comparison_op()?;
        let rhs = self.parse_expr()?;
        Ok(Constraint::Cmp { subject, op, rhs })
    }

    fn parse_comparison_op(&mut self) -> PResult<BinOp> {
        let op = match self.cur() {
            TokenKind::EqEq => BinOp::Eq,
            TokenKind::NotEq => BinOp::Ne,
            TokenKind::Lt => BinOp::Lt,
            TokenKind::Le => BinOp::Le,
            TokenKind::Gt => BinOp::Gt,
            TokenKind::Ge => BinOp::Ge,
            _ => {
                let span = self.cur_span();
                return self.err(
                    span,
                    "expected a comparison operator (`>`, `<=`, `==`, ...)",
                );
            }
        };
        self.bump();
        Ok(op)
    }

    // ---------- flow ----------

    fn parse_flow(&mut self) -> PResult<FlowDecl> {
        let start = self.cur_span();
        self.bump(); // flow
        let name = self.take_ident()?;
        self.expect(TokenKind::LParen)?;
        let mut params = Vec::new();
        while !self.at(&TokenKind::RParen) && !self.at_eof() {
            let pname = self.take_ident()?;
            self.expect(TokenKind::Colon)?;
            let ty = self.parse_type()?;
            params.push(Param { name: pname, ty });
            if !self.eat(&TokenKind::Comma) {
                break;
            }
        }
        self.expect(TokenKind::RParen)?;
        let ret = if self.eat(&TokenKind::Arrow) {
            Some(self.parse_type()?)
        } else {
            None
        };
        let budget = if self.at(&TokenKind::Budget) {
            Some(self.parse_budget()?)
        } else {
            None
        };
        let body = self.parse_block()?;
        Ok(FlowDecl {
            name,
            params,
            ret,
            budget,
            body,
            span: start.merge(self.prev),
        })
    }

    /// `budget(requests: N, parallel: K, hops: M)` — a compile-time SLA. Each field is
    /// optional; values are non-negative integers.
    fn parse_budget(&mut self) -> PResult<Budget> {
        let start = self.cur_span();
        self.bump(); // budget
        self.expect(TokenKind::LParen)?;
        let mut b = Budget::default();
        while !self.at(&TokenKind::RParen) && !self.at_eof() {
            let key = self.take_name_lenient()?;
            self.expect(TokenKind::Colon)?;
            let val_span = self.cur_span();
            let value = self.parse_expr()?;
            let n = match value {
                Expr::Int(i, _) if i >= 0 => i as u64,
                _ => {
                    return self.err(
                        val_span,
                        "a budget value must be a non-negative integer (e.g. `requests: 3`)",
                    )
                }
            };
            match key.node.as_str() {
                "requests" => b.requests = Some(n),
                "parallel" => b.parallel = Some(n),
                "hops" => b.hops = Some(n),
                other => {
                    return self.err(
                        key.span,
                        format!(
                            "unknown budget field `{other}` (expected `requests`, `parallel`, or `hops`)"
                        ),
                    )
                }
            }
            if !self.eat(&TokenKind::Comma) {
                break;
            }
        }
        self.expect(TokenKind::RParen)?;
        b.span = start.merge(self.prev);
        Ok(b)
    }

    // ---------- mock / test ----------

    fn parse_mock(&mut self) -> PResult<MockDecl> {
        let start = self.cur_span();
        self.bump(); // mock
        let name = self.take_ident()?;
        self.expect(TokenKind::LBrace)?;
        let mut routes = Vec::new();
        while !self.at(&TokenKind::RBrace) && !self.at_eof() {
            let r_start = self.cur_span();
            let method = self.take_ident()?;
            let path = self.parse_path()?;
            self.expect(TokenKind::Arrow)?;
            let response = self.parse_expr()?;
            routes.push(MockRoute {
                method,
                path,
                response,
                span: r_start.merge(self.prev),
            });
        }
        self.expect(TokenKind::RBrace)?;
        Ok(MockDecl {
            name,
            routes,
            span: start.merge(self.prev),
        })
    }

    fn parse_server(&mut self) -> PResult<ServerDecl> {
        let start = self.cur_span();
        self.bump(); // server
        let name = self.take_ident()?;
        self.expect(TokenKind::LBrace)?;
        let mut settings = Vec::new();
        let mut routes = Vec::new();
        while !self.at(&TokenKind::RBrace) && !self.at_eof() {
            if self.at(&TokenKind::Route) {
                let r_start = self.cur_span();
                self.bump(); // route
                let method = self.take_ident()?;
                let path = self.parse_path()?;
                let budget = if self.at(&TokenKind::Budget) {
                    Some(self.parse_budget()?)
                } else {
                    None
                };
                self.expect(TokenKind::Arrow)?;
                let handler = if self.at(&TokenKind::LBrace) {
                    self.parse_block()?
                } else {
                    // A bare expression handler `-> Flow(x)` becomes `{ return Flow(x) }`.
                    let e = self.parse_expr()?;
                    let span = e.span();
                    Block {
                        stmts: vec![Stmt::Return {
                            value: Some(e),
                            span,
                        }],
                        span,
                    }
                };
                routes.push(ServerRoute {
                    method,
                    path,
                    budget,
                    handler,
                    span: r_start.merge(self.prev),
                });
            } else {
                let s_start = self.cur_span();
                let key = self.take_name_lenient()?;
                self.expect(TokenKind::Colon)?;
                let values = self.parse_setting_values()?;
                settings.push(Setting {
                    key,
                    values,
                    span: s_start.merge(self.prev),
                });
            }
        }
        self.expect(TokenKind::RBrace)?;
        Ok(ServerDecl {
            name,
            settings,
            routes,
            span: start.merge(self.prev),
        })
    }

    fn parse_test(&mut self) -> PResult<TestDecl> {
        let start = self.cur_span();
        self.bump(); // test
        let description = match self.cur() {
            TokenKind::Str(_) => {
                if let TokenKind::Str(s) = self.bump().kind {
                    s
                } else {
                    unreachable!()
                }
            }
            _ => {
                let span = self.cur_span();
                return self.err(span, "expected a test description string after `test`");
            }
        };
        let body = self.parse_block()?;
        Ok(TestDecl {
            description,
            body,
            span: start.merge(self.prev),
        })
    }

    // ---------- statements ----------

    fn parse_block(&mut self) -> PResult<Block> {
        let start = self.cur_span();
        self.expect(TokenKind::LBrace)?;
        let mut stmts = Vec::new();
        while !self.at(&TokenKind::RBrace) && !self.at_eof() {
            stmts.push(self.parse_stmt()?);
        }
        self.expect(TokenKind::RBrace)?;
        Ok(Block {
            stmts,
            span: start.merge(self.prev),
        })
    }

    fn parse_stmt(&mut self) -> PResult<Stmt> {
        match self.cur() {
            TokenKind::Fetch => self.parse_fetch(),
            TokenKind::Let => {
                let start = self.cur_span();
                self.bump();
                let name = self.take_ident()?;
                self.expect(TokenKind::Assign)?;
                let value = self.parse_expr()?;
                Ok(Stmt::Let {
                    name,
                    value,
                    span: start.merge(self.prev),
                })
            }
            TokenKind::Log => {
                let start = self.cur_span();
                self.bump();
                let value = self.parse_expr()?;
                Ok(Stmt::Log {
                    value,
                    span: start.merge(self.prev),
                })
            }
            TokenKind::Parallel => {
                let start = self.cur_span();
                self.bump();
                let block = self.parse_block()?;
                Ok(Stmt::Parallel {
                    block,
                    span: start.merge(self.prev),
                })
            }
            TokenKind::Return => {
                let start = self.cur_span();
                self.bump();
                let value = if self.at(&TokenKind::RBrace) || self.at_eof() {
                    None
                } else {
                    Some(self.parse_expr()?)
                };
                Ok(Stmt::Return {
                    value,
                    span: start.merge(self.prev),
                })
            }
            TokenKind::Assert => {
                let start = self.cur_span();
                self.bump();
                let value = self.parse_expr()?;
                Ok(Stmt::Assert {
                    value,
                    span: start.merge(self.prev),
                })
            }
            TokenKind::Using => {
                let start = self.cur_span();
                self.bump();
                self.expect(TokenKind::Mock)?;
                let name = self.take_ident()?;
                Ok(Stmt::UsingMock {
                    name,
                    span: start.merge(self.prev),
                })
            }
            _ => {
                let start = self.cur_span();
                let expr = self.parse_expr()?;
                let bind = if self.eat(&TokenKind::Arrow) {
                    Some(self.parse_binding()?)
                } else {
                    None
                };
                Ok(Stmt::Expr {
                    expr,
                    bind,
                    span: start.merge(self.prev),
                })
            }
        }
    }

    fn parse_fetch(&mut self) -> PResult<Stmt> {
        let start = self.cur_span();
        self.bump(); // fetch

        // Optional HTTP method: `fetch POST Endpoint /path`. We only treat the first
        // identifier as a method when it is a known verb *and* is followed by another
        // identifier (the endpoint) — `fetch GitHub /x` keeps GitHub as the endpoint
        // because it is followed by the path (`/`).
        let method = if matches!(&self.cur(), TokenKind::Ident(m) if is_http_method(m))
            && matches!(self.nth(1), TokenKind::Ident(_))
        {
            self.take_ident()?.node.to_uppercase()
        } else {
            "GET".to_string()
        };

        let endpoint = self.take_ident()?;
        let path = self.parse_path()?;

        // Optional request body: `body <expr>`.
        let body = if self.ident_text() == Some("body") {
            self.bump();
            Some(self.parse_expr()?)
        } else {
            None
        };

        let mut params = Vec::new();
        if self.eat(&TokenKind::Params) {
            self.expect(TokenKind::LBrace)?;
            while !self.at(&TokenKind::RBrace) && !self.at_eof() {
                let k = self.take_name_lenient()?;
                self.expect(TokenKind::Colon)?;
                let v = self.parse_expr()?;
                params.push((k, v));
                self.eat(&TokenKind::Comma);
            }
            self.expect(TokenKind::RBrace)?;
        }
        let mut pipeline = Vec::new();
        while self.eat(&TokenKind::Pipe) {
            pipeline.push(self.parse_pipeline_op()?);
        }
        let bind = if self.eat(&TokenKind::Arrow) {
            Some(self.parse_binding()?)
        } else {
            None
        };
        Ok(Stmt::Fetch(FetchStmt {
            method,
            endpoint,
            path,
            params,
            body,
            pipeline,
            bind,
            span: start.merge(self.prev),
        }))
    }

    fn parse_binding(&mut self) -> PResult<Binding> {
        let name = self.take_ident()?;
        let ty = if self.eat(&TokenKind::Colon) {
            Some(self.parse_type()?)
        } else {
            None
        };
        Ok(Binding { name, ty })
    }

    fn parse_path(&mut self) -> PResult<PathPattern> {
        let start = self.cur_span();
        if !self.at(&TokenKind::Slash) {
            let span = self.cur_span();
            return self.err(span, "expected a route path starting with `/`");
        }
        let mut segments = Vec::new();
        while self.at(&TokenKind::Slash) {
            self.bump(); // '/'
            match self.cur() {
                TokenKind::LBrace => {
                    self.bump();
                    let expr = self.parse_expr()?;
                    self.expect(TokenKind::RBrace)?;
                    segments.push(PathSeg::Param(expr));
                }
                TokenKind::Ident(s) => {
                    let s = s.clone();
                    self.bump();
                    segments.push(PathSeg::Literal(s));
                }
                TokenKind::Int(n) => {
                    let n = *n;
                    self.bump();
                    segments.push(PathSeg::Literal(n.to_string()));
                }
                _ => break, // tolerate a trailing slash
            }
        }
        Ok(PathPattern {
            segments,
            span: start.merge(self.prev),
        })
    }

    /// Parse an optional `by: <expr>` argument inside a pipeline op's parentheses.
    fn parse_optional_by(&mut self) -> PResult<Option<Expr>> {
        if self.at(&TokenKind::RParen) {
            return Ok(None);
        }
        self.expect(TokenKind::By)?;
        self.expect(TokenKind::Colon)?;
        Ok(Some(self.parse_expr()?))
    }

    fn parse_pipeline_op(&mut self) -> PResult<PipelineOp> {
        let start = self.cur_span();
        let name = self.take_ident()?;
        self.expect(TokenKind::LParen)?;
        let op = match name.node.as_str() {
            "filter" => {
                let lambda = self.parse_expr()?;
                PipelineOp::Filter {
                    lambda,
                    span: start.merge(self.cur_span()),
                }
            }
            "map" => {
                let lambda = self.parse_expr()?;
                PipelineOp::Map {
                    lambda,
                    span: start.merge(self.cur_span()),
                }
            }
            "sort" => {
                self.expect(TokenKind::By)?;
                self.expect(TokenKind::Colon)?;
                let by = self.parse_expr()?;
                let desc = if self.eat(&TokenKind::Desc) {
                    true
                } else {
                    self.eat(&TokenKind::Asc);
                    false
                };
                PipelineOp::Sort {
                    by,
                    desc,
                    span: start.merge(self.cur_span()),
                }
            }
            "limit" | "take" => {
                let count = self.parse_expr()?;
                PipelineOp::Limit {
                    count,
                    span: start.merge(self.cur_span()),
                }
            }
            "skip" => {
                let count = self.parse_expr()?;
                PipelineOp::Skip {
                    count,
                    span: start.merge(self.cur_span()),
                }
            }
            // `pluck(.field)` is sugar for `map(.field)`.
            "pluck" => {
                let lambda = self.parse_expr()?;
                PipelineOp::Map {
                    lambda,
                    span: start.merge(self.cur_span()),
                }
            }
            "reverse" => PipelineOp::Reverse {
                span: start.merge(self.cur_span()),
            },
            "flatten" => PipelineOp::Flatten {
                span: start.merge(self.cur_span()),
            },
            "count" => PipelineOp::Count {
                span: start.merge(self.cur_span()),
            },
            "unique" => {
                let by = self.parse_optional_by()?;
                PipelineOp::Unique {
                    by,
                    span: start.merge(self.cur_span()),
                }
            }
            "sum" => {
                let by = self.parse_optional_by()?;
                PipelineOp::Sum {
                    by,
                    span: start.merge(self.cur_span()),
                }
            }
            other => {
                let span = name.span;
                return self.err(
                    span,
                    format!(
                        "unknown pipeline operator `{other}` (expected filter, map, sort, limit/take, skip, pluck, reverse, unique, flatten, count or sum)"
                    ),
                );
            }
        };
        self.expect(TokenKind::RParen)?;
        Ok(op)
    }

    // ---------- types ----------

    fn parse_type(&mut self) -> PResult<TypeExpr> {
        let first = self.parse_type_atom()?;
        if !self.at(&TokenKind::Pipe) {
            return Ok(first);
        }
        let mut alts = vec![first];
        while self.eat(&TokenKind::Pipe) {
            alts.push(self.parse_type_atom()?);
        }
        Ok(TypeExpr::Union(alts))
    }

    fn parse_type_atom(&mut self) -> PResult<TypeExpr> {
        let name = self.take_ident()?;
        let mut base = if self.at(&TokenKind::Lt) {
            self.bump();
            let mut args = Vec::new();
            while !self.at(&TokenKind::Gt) && !self.at_eof() {
                args.push(self.parse_type()?);
                if !self.eat(&TokenKind::Comma) {
                    break;
                }
            }
            self.expect(TokenKind::Gt)?;
            TypeExpr::Generic(name.node, args)
        } else {
            TypeExpr::Named(name.node)
        };
        loop {
            if self.at(&TokenKind::LBracket) && matches!(self.nth(1), TokenKind::RBracket) {
                self.bump();
                self.bump();
                base = TypeExpr::Array(Box::new(base));
            } else if self.eat(&TokenKind::Question) {
                base = TypeExpr::Optional(Box::new(base));
            } else {
                break;
            }
        }
        Ok(base)
    }

    // ---------- expressions (Pratt) ----------

    fn parse_expr(&mut self) -> PResult<Expr> {
        self.parse_or()
    }

    fn parse_or(&mut self) -> PResult<Expr> {
        let mut lhs = self.parse_and()?;
        while self.at(&TokenKind::Or) {
            self.bump();
            let rhs = self.parse_and()?;
            lhs = bin(BinOp::Or, lhs, rhs);
        }
        Ok(lhs)
    }

    fn parse_and(&mut self) -> PResult<Expr> {
        let mut lhs = self.parse_cmp()?;
        while self.at(&TokenKind::And) {
            self.bump();
            let rhs = self.parse_cmp()?;
            lhs = bin(BinOp::And, lhs, rhs);
        }
        Ok(lhs)
    }

    fn parse_cmp(&mut self) -> PResult<Expr> {
        let mut lhs = self.parse_add()?;
        loop {
            let op = match self.cur() {
                TokenKind::EqEq => BinOp::Eq,
                TokenKind::NotEq => BinOp::Ne,
                TokenKind::Lt => BinOp::Lt,
                TokenKind::Le => BinOp::Le,
                TokenKind::Gt => BinOp::Gt,
                TokenKind::Ge => BinOp::Ge,
                _ => break,
            };
            self.bump();
            let rhs = self.parse_add()?;
            lhs = bin(op, lhs, rhs);
        }
        Ok(lhs)
    }

    fn parse_add(&mut self) -> PResult<Expr> {
        let mut lhs = self.parse_mul()?;
        loop {
            let op = match self.cur() {
                TokenKind::Plus => BinOp::Add,
                TokenKind::Minus => BinOp::Sub,
                _ => break,
            };
            self.bump();
            let rhs = self.parse_mul()?;
            lhs = bin(op, lhs, rhs);
        }
        Ok(lhs)
    }

    fn parse_mul(&mut self) -> PResult<Expr> {
        let mut lhs = self.parse_unary()?;
        while self.at(&TokenKind::Star) {
            self.bump();
            let rhs = self.parse_unary()?;
            lhs = bin(BinOp::Mul, lhs, rhs);
        }
        Ok(lhs)
    }

    fn parse_unary(&mut self) -> PResult<Expr> {
        let start = self.cur_span();
        if self.at(&TokenKind::Not) {
            self.bump();
            let rhs = self.parse_unary()?;
            return Ok(Expr::Unary {
                op: UnOp::Not,
                span: start.merge(rhs.span()),
                rhs: Box::new(rhs),
            });
        }
        if self.at(&TokenKind::Minus) {
            self.bump();
            let rhs = self.parse_unary()?;
            return Ok(Expr::Unary {
                op: UnOp::Neg,
                span: start.merge(rhs.span()),
                rhs: Box::new(rhs),
            });
        }
        self.parse_postfix()
    }

    fn parse_postfix(&mut self) -> PResult<Expr> {
        let mut e = self.parse_primary()?;
        loop {
            if self.at(&TokenKind::Dot) {
                self.bump();
                let field = self.take_ident()?;
                let span = e.span().merge(field.span);
                e = Expr::Field {
                    base: Box::new(e),
                    field,
                    span,
                };
            } else if self.at(&TokenKind::LParen) {
                self.bump();
                let saved = self.no_record;
                self.no_record = false;
                let mut args = Vec::new();
                while !self.at(&TokenKind::RParen) && !self.at_eof() {
                    args.push(self.parse_expr()?);
                    if !self.eat(&TokenKind::Comma) {
                        break;
                    }
                }
                self.no_record = saved;
                self.expect(TokenKind::RParen)?;
                let span = e.span().merge(self.prev);
                e = Expr::Call {
                    callee: Box::new(e),
                    args,
                    span,
                };
            } else {
                break;
            }
        }
        Ok(e)
    }
